--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "sass": "^1.63.6",
+    "stylelint": "^15.10.1",
+    "stylelint-config-standard": "^34.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
@@ -39,6 +41,6 @@
     "vue-tsc": "^1.8.3"
   },
   "lint-staged": {
-    "*.{js,ts,tsx,vue}": "eslint --cache --fix"
+    "*.{js,ts,tsx,vue}": "eslint  --fix"
   }
 }
