--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
+    "@commitlint/cli": "17.0.2",
+    "@commitlint/config-conventional": "17.0.2",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.15.1",
+    "husky": "^8.0.3",
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "sass": "^1.63.6",
