--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zion-ui",
+  "name": "zion-ui-vite",
   "private": true,
   "version": "0.0.0",
   "type": "commonjs",
@@ -11,7 +11,9 @@
     "prepare": "husky install",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "docs:serve": "vitepress serve docs",
+    "test": "vitest",
+    "build:components": "node ./scripts/build.js"
   },
   "dependencies": {
     "@commitlint/cli": "17.0.2",
@@ -19,6 +21,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@testing-library/vue": "^6.5.1",
     "@types/node": "^20.4.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -29,6 +32,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.15.1",
+    "fs-extra": "^11.1.1",
+    "happy-dom": "^10.5.1",
     "husky": "^8.0.3",
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
@@ -36,11 +41,13 @@
     "stylelint": "^15.10.1",
     "stylelint-config-standard": "^34.0.0",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
     "vitepress": "1.0.0-alpha.2",
     "vitepress-demoblock": "^1.0.4",
     "vitepress-theme-demoblock": "^1.4.2",
+    "vitest": "^0.33.0",
     "vue-tsc": "^1.8.3"
   },
   "lint-staged": {
