--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@types/node": "^20.4.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vitejs/plugin-vue": "^2.2.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.8",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
@@ -43,9 +43,8 @@
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0",
-    "vitepress": "1.0.0-alpha.2",
-    "vitepress-demoblock": "^1.0.4",
+    "vite": "^2.8.0",
+    "vitepress": "^1.0.0-alpha.2",
     "vitepress-theme-demoblock": "^1.4.2",
     "vitest": "^0.33.0",
     "vue-tsc": "^1.8.3"
