--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-conventional": "17.0.2",
+    "async-validator": "^4.2.5",
     "vue": "^3.2.44"
   },
   "devDependencies": {
