--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^3.2.44"
   },
   "devDependencies": {
+    "@floating-ui/dom": "^1.4.5",
     "@testing-library/vue": "^6.5.1",
     "@types/node": "^20.4.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
