--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs",
-    "test": "vitest",
+    "test:run": "vitest run",
     "build:components": "node ./scripts/build.js",
     "coverage": "vitest run --coverage"
   },
@@ -30,6 +30,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vitejs/plugin-vue-jsx": "^1.3.8",
+    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-istanbul": "^0.33.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
