fix: 更改tsconfig部分规则

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,11 @@
     "jsx": "preserve",
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "strict": false,
+    //引入未使用报错
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","src/.vitepress/**/*","src/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
