--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-conventional": "17.0.2",
     "async-validator": "^4.2.5",
-    "vue": "^3.2.44"
+    "vue": "^3.2.41"
   },
   "devDependencies": {
     "@floating-ui/dom": "^1.4.5",
@@ -49,7 +49,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.0.1",
-    "vitepress": "^1.0.0-alpha.2",
+    "vitepress": "1.0.0-alpha.2",
     "vitepress-theme-demoblock": "^1.4.2",
     "vitest": "^0.33.0",
     "vue-tsc": "^1.8.3"
