--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install modules
         run: pnpm install
       - name: Run Test Coverage
-        run:  pnpm coverage
+        run:  cd packages/zion-ui-vite && pnpm coverage
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
