--- a/packages/docs-vite/package.json
+++ b/packages/docs-vite/package.json
@@ -2,16 +2,25 @@
   "name": "docs-vite",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite"
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
+  },
+  "dependencies": {
+    "vue": "^3.2.41"
+  },
+  "devDependencies": {
+    "vite": "^4.0.1",
+    "vitepress": "1.0.0-alpha.2",
+    "vitepress-theme-demoblock": "^1.4.2",
+    "@vitejs/plugin-vue": "^2.2.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.8",
+    "postcss": "^8.4.26",
+    "sass": "^1.63.6"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "vue": "^3.3.4",
-    "zion-ui-vite": "workspace:^"
-  }
+  "license": "ISC"
 }
