fix: 触发条件分支名修改

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish To Npm
 on:
   pull_request:
     branches:
-      - publish
+      - publish-zion-ui
     types:
       - closed
 jobs:
