fix: action触发条件更改

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,8 @@
 name: Publish To Npm
 
 on:
-  pull_request:
-    branches:
-      - publish-zion-ui
-    types:
-      - closed
+  push:
+    branches: [publish-zion-ui]
 jobs:
   publish:
     runs-on: ubuntu-latest
