--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,6 @@ jobs:
       - name: "Publish to the npm registry"
         # uses: primer/publish@3.0.0
         uses: JS-DevTools/npm-publish@v2
+        run: cd packages/zion-ui-vite && npm publish
         with:
           token: ${{ secrets.NPM_AUTH_TOKEN }} # 跟前面步骤中的 NPM_AUTH_TOKEN 保持一致
-          dir: "packages/zion-ui-vite"
