--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         run: cd packages/zion-ui-vite && npm run build
       - name: "Publish to the npm registry"
         # uses: primer/publish@3.0.0
-        uses: JS-DevTools/npm-publish@v2
-        run: cd packages/zion-ui-vite && npm publish
-        with:
+        # uses: JS-DevTools/npm-publish@v2
+        env:
           token: ${{ secrets.NPM_AUTH_TOKEN }} # 跟前面步骤中的 NPM_AUTH_TOKEN 保持一致
+        run: cd packages/zion-ui-vite && npm publish
