--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish To Npm
 
 on:
   push:
-    branches: [publish-zion-ui]
+    branches: [main]
 jobs:
   publish:
     runs-on: ubuntu-latest
